
* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

12-Jul-2010 Jean-Marie Simonet
 # Getting rid of useless Options in mod latest and mod popular in back-end
 $ Typo in en-GB.ini + sorting strings
 # Getting rid of useless No Category option
 # [#21376] Beez2.0 and Beez5 (Angie Radtke)
 # Missing CSS in front-end Beez (Thanks Angie)
 
11-Jul-2010 Mark Dexter
# Sample data fixes to assets table to clean up misc. acl issues (Elin Waring)
# [#21311] Fix Context Sensitive Help Problem
# Sample data fixes to joomla.sql for plugins (Elin Waring)
# Fix beez5 hide.js file (Angie Radtke)

11-Jul-2010 Jean-Marie Simonet
 # [#21366] * Checkin featured articles fails.
 # [#21365] Search manager - global options. Thanks Bill. + some string consolidation
 # [#21350] [PATCH] Language files in extension directory fail to load

09-Jul-2010 Jean-Marie Simonet
 $ Correcting strings

09-Jul-2010 Jean-Marie Simonet
 # [#21351] mod_login (Thanks Angie) + mod_languages html
 # [#21292] Images inserted into articles always go to the top in Firefox. Thanks Brad

08-Jul-2010 Mark Dexter
# Fixes to beez and beez5 templates (Angie Radtke)

08-Jul-2010 Jean-Marie Simonet
 # [#21341] Tinymce has a comma error in JS. Thanks Janich.
 # [#21290] Extension Manager: Manage Message. Thanks Matt.
 # [#21330] Com_contact Patch. Thanks Angie.
 ^ [#21266] Clean up code for removal of Uncategorised content
 # [#21333] com_languages views with wrong id on filter
 
07-Jul-2010 Jean-Marie Simonet
 $ [#21313] String in Banner.ini. Thanks Joseph.
 #$ [#21325] Ordering parameter in frontend edit doesn't make sense
 
06-Jul-2010 Andrew Eddie
 # [#20926] Fields in jos_user_profile not removed when user is deleted (Boris Baddenoff, Omar Ramos).

05-Jul-2010 Mark Dexter
 # Sample data - assets table, uncategorised issues (Elin Waring)
 # [#21117] Save Order button doesn't work in Menu Manager:Menu Items

05-Jul-2010 Jean-Marie Simonet